; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_cf-lexer.c_cf_preprocess_get_def.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_cf-lexer.c_cf_preprocess_get_def.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cf_def = type { i32 }
%struct.cf_preprocessor = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.cf_def* }
%struct.strref = type { i32 }

@INVALID_INDEX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cf_def* (%struct.cf_preprocessor*, %struct.strref*)* @cf_preprocess_get_def to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cf_def* @cf_preprocess_get_def(%struct.cf_preprocessor* %0, %struct.strref* %1) #0 {
  %3 = alloca %struct.cf_def*, align 8
  %4 = alloca %struct.cf_preprocessor*, align 8
  %5 = alloca %struct.strref*, align 8
  %6 = alloca i64, align 8
  store %struct.cf_preprocessor* %0, %struct.cf_preprocessor** %4, align 8
  store %struct.strref* %1, %struct.strref** %5, align 8
  %7 = load %struct.cf_preprocessor*, %struct.cf_preprocessor** %4, align 8
  %8 = load %struct.strref*, %struct.strref** %5, align 8
  %9 = call i64 @cf_preprocess_get_def_idx(%struct.cf_preprocessor* %7, %struct.strref* %8)
  store i64 %9, i64* %6, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* @INVALID_INDEX, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store %struct.cf_def* null, %struct.cf_def** %3, align 8
  br label %21

14:                                               ; preds = %2
  %15 = load %struct.cf_preprocessor*, %struct.cf_preprocessor** %4, align 8
  %16 = getelementptr inbounds %struct.cf_preprocessor, %struct.cf_preprocessor* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load %struct.cf_def*, %struct.cf_def** %17, align 8
  %19 = load i64, i64* %6, align 8
  %20 = getelementptr inbounds %struct.cf_def, %struct.cf_def* %18, i64 %19
  store %struct.cf_def* %20, %struct.cf_def** %3, align 8
  br label %21

21:                                               ; preds = %14, %13
  %22 = load %struct.cf_def*, %struct.cf_def** %3, align 8
  ret %struct.cf_def* %22
}

declare dso_local i64 @cf_preprocess_get_def_idx(%struct.cf_preprocessor*, %struct.strref*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
